--- a/templates/movie_card.html
+++ b/templates/movie_card.html
@@ -22,7 +22,7 @@
 </head>
 
 <body class="movie-card-page">
-<div class="backdrop-container"></div>
+<div class="backdrop-container" style="--backdrop-image: url('https://image.tmdb.org/t/p/original{{ movie.backdrop_url }}');"></div>
 <div class="background-fade-overlay"></div>
 
 
