--- a/templates/card_deck.html
+++ b/templates/card_deck.html
@@ -7,19 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <!-- Import Merriweather font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&display=swap">
-    <style>
-        /* Custom class for 'Next Movie' button color */
-        .btn-next-movie {
-            background-color: #2db830;
-            color: white;
-        }
-
-        /* Custom class for 'Filters' button color */
-        .btn-set-filters {
-            background-color: #2db830;
-            color: white;
-        }
-    </style>
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/card_deck.css') }}">
 </head>
 <body>
 <!-- Container for buttons -->
