--- a/templates/home.html
+++ b/templates/home.html
@@ -9,31 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap">
-    <style>
-        body {
-            font-family: 'Merriweather', serif;
-            overflow-x: hidden; /* Prevent horizontal scrolling */
-        }
-        .header-full-width {
-            width: 100%;
-            padding: 0 !important;
-            margin: 0 !important;
-            box-shadow: none;
-            border-radius: 0;
-            height: auto; /* Adjusted to auto for flexible height */
-        }
-        @media (max-width: 768px) {
-            /* Disabling horizontal scrolling on mobile devices */
-            html, body {
-                overflow-x: hidden; /* Prevent horizontal scrolling */
-                max-width: 100%; /* Ensure body does not exceed the viewport width */
-            }
-            .responsive-element {
-                width: 100%; /* Adjust width for smaller screens */
-            }
-            /* Additional responsive styles as needed */
-        }
-    </style>
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/home.css') }}">
 </head>
 <body>
 
