--- a/templates/movie.html
+++ b/templates/movie.html
@@ -3,20 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/movie.css') }}">
 </head>
-
-
-<style>
-        /* Prevent horizontal scrolling for all devices */
-        body, html {
-            overflow-x: hidden; /* Prevent horizontal overflow */
-            max-width: 100%; /* Ensure content does not exceed the viewport's width */
-        }
-
-        @media (max-width: 768px) {
-            /* Additional styles for mobile devices can be added here */
-        }
-    </style>
 
 
 
