--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,74 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles/footer.css') }}">
-
-
-
-</head>
-<body>
-
-<!-- Footer -->
-<div class="footer-basic">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
-
-    <footer class="footer_area section_padding_130_0">
-        <div class="container-fluid"> <!-- Changed from container to container-fluid -->
-            <div class="row">
-                <!-- Single Widget-->
-                <div class="col-12 col-sm-6 col-lg-4">
-                    <div class="single-footer-widget section_padding_0_130">
-                        <!-- Footer Logo-->
-                        <div class="footer-logo mb-3"></div>
-                        <p>Nextreel 2023</p>
-                        <ul>
-                            {#                            <li><a href="#">Privacy Policy</a></li>#}
-                            {#                                <li><a href="#">About Us</a></li>#}
-
-                        </ul>
-
-                    </div>
-                </div>
-                <!-- Single Widget-->
-                <div class="col-12 col-sm-6 col-lg">
-                    <div class="single-footer-widget section_padding_0_130">
-                        <!-- Widget Title-->
-                        <h5 class="widget-title"></h5>
-                        <!-- Footer Menu-->
-                        <ul>
-                            <li><a href="#">About Us</a></li>
-                            <li><a href="#">Privacy Policy</a></li>
-                            <li><a href="#">DMCA</a></li>
-                        </ul>
-
-                    </div>
-                </div>
-
-                <!-- Single Widget-->
-                <div class="col-12 col-sm-6 col-lg">
-                    <div class="single-footer-widget section_padding_0_130">
-                        <!-- Widget Title-->
-                        <h5 class="widget-title">Contact</h5>
-                        <!-- Footer Menu-->
-                        <div class="footer_menu">
-
-                            <ul>
-                                <li>Email us: <a href="mailto:bryce@nxtreel.com">bryce@nxtreel.com</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-
-
-            </div>
+<footer class="bg-dark text-light py-4 mt-auto">
+    <div class="container d-flex flex-column flex-md-row justify-content-between align-items-center">
+        <p class="mb-3 mb-md-0 small">\u00a9 2025 NextReel</p>
+        <div class="d-flex gap-3">
+            <a href="#" class="text-light text-decoration-none small">Privacy Policy</a>
+            <a href="#" class="text-light text-decoration-none small">About Us</a>
         </div>
-    </footer>
-</div>
-
-
-</body>
-</html>
+    </div>
+</footer>
